Se configuran estilos y se mapea el tablero, falta hacer la logica del tablero y hacerlo responsive para escritorio

--- a/src/components/styles/Board.css
+++ b/src/components/styles/Board.css
@@ -1,5 +1,12 @@
-.wi-board{
-    max-width: 500px;
+.contanainer-wi-board {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.wi-board {
+    gap: 20px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
 }
