--- a/src/components/styles/CharacterCard.css
+++ b/src/components/styles/CharacterCard.css
@@ -3,44 +3,22 @@
     flex-direction: column;
     max-width: 150px;
     width: 100%;
-    height: 200px;
-    border: 2px solid #030303;
-    
+    height: 100%;
     border-radius: 10px;
     box-shadow: 5px 2px 10px 1px #000;
-    margin-bottom: 20px;
-    /*animation: rotar2 0.7s linear;*/
 }
 
 .wi-character-card.none {
     align-items: center;
     justify-content: center;
-    border: 2px solid #030303;
-    /*animation: rotar 0.7s linear;*/
-    /*transition: all 0.5s ease;*/
 }
 .wi-character-card img {
-    display: flex;
-    bottom: -100px;
+    width: 100%;
+    height: 100%;
     border-radius: 10px;    
+    margin: 0;
 }
 .wi-character-card.none img {
-    max-width: 100px;
-}
+    transform: scale(65%);
 
-/*
-@keyframes rotar{
-    from{
-        transform: rotateY(180deg);
-    }to{
-        transform: rotateY(360deg);
-    }
 }
-
-@keyframes rotar2{
-    from{
-        transform: rotateY(360deg);
-    }to{
-        transform: rotateY(180deg);
-    }
-}*/
