Se arregla bug de los logos

--- a/src/components/styles/CharacterCard.css
+++ b/src/components/styles/CharacterCard.css
@@ -17,6 +17,7 @@
     height: 100%;
     border-radius: 10px;    
     margin: 0;
+    transition: all 0.5s ease;
 }
 .wi-character-card.none img {
     transform: scale(65%);
